--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,7 +16,8 @@
     "zone.js": "^0.6.12",
     "@ngrx/store": "^2.0.0",
     "@ngrx/effects": "^1.0.0",
-    "@ngrx/core": "^1.0.0"
+    "@ngrx/core": "^1.0.0",
+    "ng2-translate": "^2.1.0"
   },
   "devDependencies": {
     "del": "2.2.0",
