--- a/mobile/package.json
+++ b/mobile/package.json
@@ -7,9 +7,9 @@
     "@angular/platform-browser": "^2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
     "@angular/router": "^2.0.0-rc.1",
-    "es6-shim": "^0.35.0",
+    "es6-shim": "^0.35.1",
     "ionic-angular": "2.0.0-beta.7",
-    "ionic-native": "^1.1.0",
+    "ionic-native": "1.2.4",
     "ionicons": "3.0.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
