--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,7 +17,8 @@
     "@ngrx/store": "^2.0.0",
     "@ngrx/effects": "^1.0.0",
     "@ngrx/core": "^1.0.0",
-    "ng2-translate": "^2.1.0"
+    "ng2-translate": "^2.1.0",
+    "moment": "^2.13.0"
   },
   "devDependencies": {
     "del": "2.2.0",
